Fixed CSS for pre on safari

--- a/static/css/posts.css
+++ b/static/css/posts.css
@@ -3,6 +3,7 @@ pre {
     font-size: var(--bs-body-font-size);
     text-wrap: wrap;
     white-space: pre;
+    word-wrap: break-word;
 }
 pre img {
     border: 2px solid var(--bs-gray-300);
